...
      ),
    );
  }

  Widget videoView() {
    return Stack(
      key: Key("video_view"),
      children: [
        StreamBuilder<String>(
          stream: _bloc.currentItem,
          initialData: _bloc.initialCurrentItem,
          builder: (context, snapshot) {
            final String imageUrl = snapshot.data;
...
                backgroundColor: Colors.green,
                mini: true,
                child: Text("Pre"),
              ),
              const SizedBox(),
              FloatingActionButton(
                key: Key('btn_next'),
                heroTag: 'nextButton',
                onPressed: () => _bloc.itemEventSink.add(PlayNext()),
                backgroundColor: Colors.green,
                mini: true,
                child: Text("Next"),
              ),
...
